--- a/README.adoc
+++ b/README.adoc
@@ -38,8 +38,9 @@ endif::[]
 :baseURL: https://github.com/IUT-Blagnac/sae4-01-template
 
 // Tags
-image:{baseURL}/actions/workflows/build.yml/badge.svg[Build] 
-image:{baseURL}/actions/workflows/tests.yml/badge.svg[Tests] 
+image:{baseURL}/actions/workflows/build.yml/badge.svg[Build]
+image:{baseURL}/actions/workflows/tests.yml/badge.svg[Tests]
+image:{baseURL}/actions/workflows/codeql-security.yml/badge.svg[CodeQL Java]
 image:https://img.shields.io/badge/License-MPL%202.0-brightgreen.svg[License: MPL-2.0, link="https://opensource.org/licenses/MPL-2.0"]
 //---------------------------------------------------------------
 
