--- a/README.adoc
+++ b/README.adoc
@@ -150,3 +150,28 @@ image:img/88x31.png["Licence Creative
 Commons",style="border-width:0",link="http://creativecommons.org/licenses/by-sa/3.0/"]
 http://creativecommons.org/licenses/by-sa/3.0/[licence Creative Commons Paternité - Partage à l&#39;Identique 3.0 non transposé].
 **********************************************************************
+
+== Étapes
+
+=== Étape 1 
+
+Remarques : 
+- Aucun package 
+- Pas de séparation entre la vue et le controller
+- Pas de javadoc ni de commentaire
+- Fichier .jar dans le dépôt 
+- Pas de gestionnaire de dépendance (Maven)
+- Aucun patron 
+- Difficile à maintenir
+
+Diagramme de classe : 
+
+
+image::doc/Diagramme classe.png[]
+
+
+Diagramme de séquence : 
+
+
+image::doc/Diagramme sequence.png[]
+
