Corrige les warnings
Closes #5

--- a/README.adoc
+++ b/README.adoc
@@ -178,3 +178,10 @@ Diagramme de séquence :
 
 image::doc/Diagramme sequence.png[]
 
+== Refactoring
+
+=== Corrections des warnings du projet de base
+
+==== Belotte.java
+
+Il n'y a pas eu grand chose à faire, juste de ne pas initialiser deux variables à `null`, de vérifier que le dossier de stockage à bien était créé, et de ne pas utiliser une mthode déprécier.
