--- a/README.adoc
+++ b/README.adoc
@@ -182,9 +182,9 @@ image::doc/Diagramme sequence.png[]
 
 === Suppression classe interne
 
-==== Tournoi.java
+==== Match
 
-Nous avons enlevé la classe interne Match car nous trouvions ça redondant d'avoir Match et MatchM, nous avons donc fait le choix de garder uniquement MatchM et d'y créer un constructeur qui ressemble a celui de Match.
+Nous avons enlevé la classe interne Match car nous trouvions cela redondant d'avoir Match et MatchM, nous avons donc fait le choix de garder uniquement MatchM et d'y créer un constructeur qui ressemble à celui de Match.
 
 === Corrections des warnings du projet de base
 
@@ -192,3 +192,6 @@ Nous avons enlevé la classe interne Match car nous trouvions ça redondant d'av
 
 Il n'y a pas eu grand chose à faire, juste de ne pas initialiser deux variables à `null`, de vérifier que le dossier de stockage à bien était créé, et de ne pas utiliser une mthode déprécier.
 
+==== Fenetre.java
+
+De nombreux champs pouvait être remplacés par des variables locales, et certains pouvait être `final`. On a aussi supprimé du code commenté ainsi qu'une variable qui vallait tout le temps `false`, qui était donc inutile, ainsi qu'une condition sans corps.
