--- a/README.adoc
+++ b/README.adoc
@@ -240,6 +240,6 @@ Suppression de beaucoup de `this.` inutiles.
 
 Ajout des tests unitaires pour les modèles de données, donc pour Match ainsi que pour Equipe.
 
-== Patron MVC
+=== Patron MVC
 
 Séparation dans plusieurs package pour les modèles de données, donc Match, et Equipe et pour la vue, donc Window. Séparation aussi des parties SQL présente dans Window (Anciennement Fenetre)
